# llm-council-enhanced

./: .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  pyproject.toml  start.ps1
backend/: attachment_storage.py  budget_policy.py  budget_router.py  check_tools.py  config.py  cost_predictor.py  council.py  execution_modes.py  file_processing.py  main.py  openrouter_client.py  openrouter_pdf.py  rag.py  rag_utils.py  storage.py
backend/tools/: parser.py  registry.py  router.py  types.py
backend/tools/definitions/: web.py
frontend/: components.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AdvancedSettingsPanel.jsx  AnalyticsDashboard.jsx  AttachmentPill.jsx  ChatInterface.css  ChatInterface.jsx  MarkdownRenderer.jsx  ModelSelector.jsx  SessionBudgetSelector.jsx  Sidebar.jsx  Stage1.jsx  Stage2.jsx  Stage3.jsx
frontend/src/components/ui/: scroll-area.jsx
frontend/src/contexts/: SettingsContext.jsx
frontend/src/utils/: cost.js
tests/: test_metadata_smoke.py  test_query_rewrite.py  test_reasoning.py  verify_upload.py
